BugFix: register link not centered in login page

--- a/Client/src/pages/auth/LoginPage/Login.module.css
+++ b/Client/src/pages/auth/LoginPage/Login.module.css
@@ -74,7 +74,7 @@
     }
 
     .title,
-    .login,
+    .register,
     .form {
         transform: translateX(0) translateY(-15vh);
     }
